Renamed maven module db-build to sample-db-build.

--- a/master/pom.xml
+++ b/master/pom.xml
@@ -12,6 +12,7 @@
 	<modules>
 		<module>dbbuild</module>
 		<module>db-build</module>
+		<module>sample-db-build</module>
 	</modules>
 
 	<properties>
