--- a/master/sample-db-build/.project
+++ b/master/sample-db-build/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>db-build</name>
+	<name>sample-db-build</name>
 	<comment></comment>
 	<projects>
 	</projects>
